siosifm_dev_win32/examples/common/siosifmdll.h

typedef int int32;
typedef unsigned int uint32;
typedef int int32;
typedef unsigned int uint32;
typedef int int32;
typedef unsigned int uint32;
// normally IfmSetToZero sets the length values to zero
// IfmSetPreset lets add a fixed offset
// must be called before IfmSetToZero, preset is in nm
DLLFUNC int32 IfmSetPreset(int32 devNumber, int32 channel, double preset);
// returns the active preset, which was set by IfmSetPreset
// attention, the preset value becumes active during IfmSetToZero
DLLFUNC double IfmGetPreset(int32 devNumber, int32 channel);
// sets the dead path, the preset values, clears the overlow and beambreak flags
// and clears the interferometer counter
DLLFUNC int32 IfmSetToZero(int32 devNumber,int32 channelMask);
// detailierte Monitoring data in service Teil als struktur
DLLFUNC int32 IfmSignalQuality(int32 devNumber,int32 channel, int32 select);
DLLFUNC int32 IfmNewSignalQualityAvailable(int32 devNumber);
DLLFUNC int32 IfmWasBeamBreak(int32 devNumber,int32 channel);
DLLFUNC int32 IfmWasLaserUnstable(int32 devNumber,int32 channel);
// Functions for environmental data and data depending from environmental values

// returns 1 if new (since the last call of this function) environment values are available
DLLFUNC int32 IfmNewEnvValuesAvailable(int32 devNumber);
// returns the connected/configured amount of sensors
DLLFUNC int32 IfmEnvSensorCount(int32 devNumber);
// returns a flag for the sensor on place "sensor" where sensor is 0.. IfmEnvSensorCount()-1
DLLFUNC uint32 IfmSensorProperty(int32 devNumber, int32 sensor);
// returns the value of the sensor
DLLFUNC double IfmSensorValue(int32 devNumber, int32 sensor);
// extended functions, dealing with internal positions for "sensor", for internal use only!!
DLLFUNC uint32 IfmSensorPropertyEx(int32 devNumber, int32 sensor);
DLLFUNC double IfmSensorValueEx(int32 devNumber, int32 sensor);
DLLFUNC int32 IfmEnvSensorCountEx(int32 devNumber);
// returns the temperature which is assotiated with "channel"
DLLFUNC double IfmTemperature(int32 devNumber, int32 channel);
// returns a description, from where the value is
DLLFUNC int32    IfmTemperatureFlags(int32 devNumber, int32 channel);
// returns the humidy which is assotiated with "channel"
DLLFUNC double IfmHumidity(int32 devNumber, int32 channel);
DLLFUNC int32    IfmHumidityFlags(int32 devNumber, int32 channel);
// returns the air pressure which is assotiated with "channel"
DLLFUNC double IfmAirPressure(int32 devNumber, int32 channel);
DLLFUNC int32    IfmAirPressureFlags(int32 devNumber, int32 channel);
// returns the water vapour pressure (calculated from humidy, temperature and air pressure) which is assotiated with "channel"
DLLFUNC double IfmWaterVapourPressure(int32 devNumber, int32 channel);
// returns the conversion coefficient (Edlen correction, calculated humidity, temperature and air pressure) which is assotiated with "channel"
DLLFUNC double IfmConversionCoeff(int32 devNumber, int32 channel);
// returns the conversion coefficient for the dead path correction
DLLFUNC double IfmDeadpathCoeff(int32 devNumber, int32 channel);
// returns the vacuum wavelength of the laser
DLLFUNC double IfmVacuumWavelength(int32 devNumber, int32 channel);
// returns the corrected wavelength
DLLFUNC double IfmWavelength(int32 devNumber, int32 channel);
// returns the air refraction index used for the environment correction of the channel
DLLFUNC double IfmAirRefraction(int32 devNumber, int32 channel);
// switch Edlen correction off, for example for measurements in vacuum or if you want to make your own correction
DLLFUNC void IfmEnableEdlenCorrection(int32 devNumber, int32 channel, int32 on);
// ask, if Edlen correction is enabled
DLLFUNC int32 IfmIsEdlenEnabled(int32 devNumber,int32 channel);
DLLFUNC void IfmSetTemperature(int32 devNumber, int32 channel, double value);
DLLFUNC void IfmSetHumidity(int32 devNumber, int32 channel, double value);
DLLFUNC void IfmSetAirPressure(int32 devNumber, int32 channel, double value);
DLLFUNC void IfmSetWaterVapourPressure(int32 devNumber, int32 channel, double value);
DLLFUNC void IfmSetConversionCoeff(int32 devNumber, int32 channel, double value);
DLLFUNC void IfmSetVacuumWavelength(int32 devNumber, int32 channel, double value);
DLLFUNC int32 IfmEnvironmentFlags(int32 devNumber, int32 channel);
DLLFUNC int32 IfmManualEnvironment(int32 devNumber, int32 channel);  //depricated; use IfmEnvironmentFlags
DLLFUNC void IfmResetManualEnvironment(int32 devNumber,int32 channel, int32 mask);
// calculates the real wavelength in air (also called Edlen-correction),
// based on the vacuum-wavelength, the air temperature in °C
// the pressure in Pa and the rel. humidity in %
DLLFUNC double IfmCalculateWavelength(double vacuumWL, double T, double P, double H);
// Special control commands


/*
section i2c-communication Special commands for accessing other cards

*/

/*
 Low level function for writing a block of data to a card in the interferometer
*/

DLLFUNC int32 IfmI2CRequestWrite(int32 devNumber, int32 i2cAddr, int32 ramAddr, int32 count, unsigned char* buffer);
/*
Check the last IfmI2CWrite operation

0 if successfull
IFM_ERROR_I2C_WRITE if an error has occured,
IFM_ERROR_I2C_INUSE if the system is yet waiting for the acknowledge
*/
DLLFUNC int32 IfmI2CStatus(int32 devNumber);
/*
  wie IfmI2CRequestWrite, blockiert aber so lange, bis Rï¿½ckmeldung von Firmware da oder Timeout
 */
DLLFUNC int32 IfmI2CWrite(int32 devNumber, int32 i2cAddr, int32 ramAddr, int32 count, unsigned char* buffer);
/*
 Low level function for requesting a read of a block of data from a card in the interferometer
*/
DLLFUNC int32 IfmI2CRequestRead(int32 devNumber, int32 i2cAddr, int32 ramAddr, int32 count);
/*
 Test whether a request to read was successfully.

\param devNumber the unique identifier for the device
\ret true if read has been successfully done, otherwise false

see IfmI2CRequestRead(int32 devNumber, int32 i2cAddr, int32 ramAddr, int32 count)
*/

DLLFUNC int32 IfmI2CReadReady(int32 devNumber);
/*! \brief Access to the internal read buffer

\param index the index in the buffer, valid from 0 to count-1
(see IfmI2CRequestRead(int32 devNumber, int32 i2cAddr, int32 ramAddr, int32 count))
*/
DLLFUNC unsigned char IfmI2CReadValue(int32 devNumber, int32 index);
/*
  like IfmI2CRequestRead but is blocking until read was successfully or an error has reported
*/
DLLFUNC int32 IfmI2CRead(int32 devNumber, int32 i2cAddr, int32 ramAddr, int32 count);
DLLFUNC unsigned char *IfmI2CReadBuffer(int32 devNumber);
// do not use; for internal operations only
DLLFUNC double IfmI2CReadOscFrequency(int32 devNumber, int32 card);
DLLFUNC int32 IfmI2CWriteOscFrequency(int32 devNumber, int32 card, double freq);
// Error Handling
DLLFUNC const char*IfmGetErrorString(int32 errorCode);
DLLFUNC int32 IfmGetError(); //den ersten Fehler seit letztem Aufruf dieser Funktion
// only for internal use
DLLFUNC int32 IfmOpenRawUSB(int32 uniqueId);
DLLFUNC int32 IfmOpenRawCOM(int32 comNumber);
DLLFUNC int32 IfmOpenRawCOM(const char *devName);
// the following functions are intended for internal use only
DLLFUNC int32 IfmSendRawPacket(int32 devNo,char *buffer, int32 len);
DLLFUNC int32 IfmRawPacketCount(int32 devNo);
DLLFUNC int32 IfmGetRawPacket(int32 devNo, int32 maxlen, char *buffer, int32 *len);
// Motor control, not implemented yet, will internally use I2C functions

/*!
\brief Stops the motor and disables the power amplifiers

\param devNumber the unique identifier for the device
\param motorNumber the number of the motor
(each controller card controls two motors, 0 and 1 refers the motors of the first card, 2 and 3 the motors of a second controller card and so on)

\ret error value
*/
DLLFUNC int32 IfmMotorStop(int32 devNumber, int32 motorNumber);
/*!
\brief Moves the motor with a constant speed

\param devNumber the unique identifier for the device
\param motorNumber the number of the motor
(each controller card controls two motors, 0 and 1 refers the motors of the first card, 2 and 3 the motors of a second controller card and so on)
\param speed (in steps/s)

\ret error value
*/
DLLFUNC int32 IfmMotorMove(int32 devNumber,int32 motorNumber,int32 speed);
/*!
\brief Moves the motor to a new position relative to the current position

\param devNumber the unique identifier for the device
\param motorNumber the number of the motor
(each controller card controls two motors, 0 and 1 refers the motors of the first card, 2 and 3 the motors of a second controller card and so on)
\param position the amount of steps the motor should move
\param speed (in steps/s)

\ret error value
*/
DLLFUNC int32 IfmMotorMoveRel(int32 devNumber, int32 motorNumber,int32 position,int32 speed);
// Human readable error message
DLLFUNC const char* IfmGetErrorString(int32 errorCode);