siosifm_dev_win32/python/siosifm.py


#normally IfmSetToZero sets the length values to zero
#IfmSetPreset lets add a fixed offset
#must be called before IfmSetToZero, preset is in nm

IfmSetPreset = ifmdll.IfmSetPreset
IfmSetPreset.argtypes = [c_int, c_int, c_double]
IfmSetPreset.restype = c_int


#returns the active preset, which was set by IfmSetPreset
#attention, the preset value becumes active during IfmSetToZero

IfmGetPreset = ifmdll.IfmGetPreset
IfmGetPreset.argtypes = [c_int, c_int]
IfmGetPreset.restype = c_double


#sets the dead path, the preset values, clears the overlow and beambreak flags
#and clears the interferometer counter

IfmSetToZero = ifmdll.IfmSetToZero
IfmSetToZero.argtypes = [c_int, c_int]
IfmSetToZero.restype = c_int


#detailed Monitoring data in service Part as strukture

IfmSignalQuality = ifmdll.IfmSignalQuality
IfmSignalQuality.argtypes = [c_int, c_int, c_int]
IfmSignalQuality.restype = c_int

IfmNewSignalQualityAvailable = ifmdll.IfmNewSignalQualityAvailable
IfmNewSignalQualityAvailable.argtypes = [c_int]
IfmNewSignalQualityAvailable.restype = c_int

IfmWasBeamBreak = ifmdll.IfmWasBeamBreak
IfmWasBeamBreak.argtypes = [c_int, c_int]
IfmWasBeamBreak.restype = c_int

IfmWasBeamBreak = ifmdll.IfmWasBeamBreak
IfmWasBeamBreak.argtypes = [c_int]
IfmWasBeamBreak.restype = c_int

IfmWasLaserUnstable = ifmdll.IfmWasLaserUnstable
IfmWasLaserUnstable.argtypes = [c_int, c_int]
IfmWasLaserUnstable.restype = c_int


#Functions for environmental data and data depending from environmental values

#returns 1 if new (since the last call of this function) environment values are available

IfmNewEnvValuesAvailable = ifmdll.IfmNewEnvValuesAvailable
IfmNewEnvValuesAvailable.argtypes = [c_int]
IfmNewEnvValuesAvailable.restype = c_int


#returns the connected/configured amount of sensors

IfmEnvSensorCount = ifmdll.IfmEnvSensorCount
IfmEnvSensorCount.argtypes = [c_int]
IfmEnvSensorCount.restype = c_int


#returns a flag for the sensor on place "sensor" where sensor is 0.. IfmEnvSensorCount()-1

IfmSensorProperty = ifmdll.IfmSensorProperty
IfmSensorProperty.argtypes = [c_int, c_int]
IfmSensorProperty.restype = c_uint


#return s the value of the sensor

IfmSensorValue = ifmdll.IfmSensorValue
IfmSensorValue.argtypes = [c_int, c_int]
IfmSensorValue.restype = c_double


#extended functions, dealing with internal positions for "sensor", for internal use only!!

IfmSensorPropertyEx = ifmdll.IfmSensorPropertyEx
IfmSensorPropertyEx.argtypes = [c_int, c_int]
IfmSensorPropertyEx.restype = c_uint

IfmSensorValueEx = ifmdll.IfmSensorValueEx
IfmSensorValueEx.argtypes = [c_int, c_int]
IfmSensorValueEx.restype = c_double

IfmEnvSensorCountEx = ifmdll.IfmEnvSensorCountEx
IfmEnvSensorCountEx.argtypes = [c_int]
IfmEnvSensorCountEx.restype = c_int


#returns the temperature which is assotiated with "channel"

IfmTemperature = ifmdll.IfmTemperature
IfmTemperature.argtypes = [c_int, c_int]
IfmTemperature.restype = c_double


#returns a description, from where the value is

IfmTemperatureFlags = ifmdll.IfmTemperatureFlags
IfmTemperatureFlags.argtypes = [c_int, c_int]
IfmTemperatureFlags.restype = c_int


#returns the humidy which is assotiated with "channel"

IfmHumidity = ifmdll.IfmHumidity
IfmHumidity.argtypes = [c_int, c_int]
IfmHumidity.restype = c_double

IfmHumidityFlags = ifmdll.IfmHumidityFlags
IfmHumidityFlags.argtypes = [c_int, c_int]
IfmHumidityFlags.restype = c_int


#returns the air pressure which is assotiated with "channel"

IfmAirPressure = ifmdll.IfmAirPressure
IfmAirPressure.argtypes = [c_int, c_int]
IfmAirPressure.restype = c_double

IfmAirPressureFlags = ifmdll.IfmAirPressureFlags
IfmAirPressureFlags.argtypes = [c_int, c_int]
IfmAirPressureFlags.restype = c_int


#returns the water vapour pressure (calculated from humidy, temperature and air pressure) which is assotiated with "channel"

IfmWaterVapourPressure = ifmdll.IfmWaterVapourPressure
IfmWaterVapourPressure.argtypes = [c_int, c_int]
IfmWaterVapourPressure.restype = c_double

#returns the conversion coefficient (Edlen correction, calculated humidity, temperature and air pressure) which is assotiated with "channel"

IfmConversionCoeff = ifmdll.IfmConversionCoeff
IfmConversionCoeff.argtypes = [c_int, c_int]
IfmConversionCoeff.restype = c_double


#returns the conversion coefficient for the dead path correction

IfmDeadpathCoeff = ifmdll.IfmDeadpathCoeff
IfmDeadpathCoeff.argtypes = [c_int, c_int]
IfmDeadpathCoeff.restype = c_double


#returns the vacuum wavelength of the laser

IfmVacuumWavelength = ifmdll.IfmVacuumWavelength
IfmVacuumWavelength.argtypes = [c_int, c_int]
IfmVacuumWavelength.restype = c_double


#returns the corrected wavelength

IfmWavelength = ifmdll.IfmWavelength
IfmWavelength.argtypes = [c_int, c_int]
IfmWavelength.restype = c_double


#returns the air refraction index used for the environment correction of the channel

IfmAirRefraction = ifmdll.IfmAirRefraction
IfmAirRefraction.argtypes = [c_int, c_int]
IfmAirRefraction.restype = c_double


#switch Edlen correction off, for example for measurements in vacuum or if you want to make your own correction

IfmEnableEdlenCorrection = ifmdll.IfmEnableEdlenCorrection
IfmEnableEdlenCorrection.argtypes = [c_int, c_int, c_int]


#ask, if Edlen correction is enabled

IfmIsEdlenEnabled = ifmdll.IfmIsEdlenEnabled
IfmIsEdlenEnabled.argtypes = [c_int, c_int]
IfmIsEdlenEnabled.restype = c_int


IfmSetTemperature = ifmdll.IfmSetTemperature
IfmSetTemperature.argtypes = [c_int, c_int, c_double]

IfmSetHumidity =ifmdll.IfmSetHumidity
IfmSetHumidity.argtypes = [c_int, c_int, c_double]

IfmSetAirPressure = ifmdll.IfmSetAirPressure
IfmSetAirPressure.argtypes = [c_int, c_int, c_double]

IfmSetWaterVapourPressure = ifmdll.IfmSetWaterVapourPressure
IfmSetWaterVapourPressure.argtypes = [c_int, c_int, c_double]

#       IfmSetConversionCoeff = ifmdll.IfmSetConversionCoeff
#       IfmSetConversionCoeff.argtypes = [c_int, c_int, c_double]

IfmSetVacuumWavelength = ifmdll.IfmSetVacuumWavelength
IfmSetVacuumWavelength.argtypes = [c_int, c_int, c_double]


IfmEnvironmentFlags = ifmdll.IfmEnvironmentFlags
IfmEnvironmentFlags.argtypes = [c_int, c_int]
IfmEnvironmentFlags.restype = c_int

IfmManualEnvironment = ifmdll.IfmManualEnvironment
IfmManualEnvironment.argtypes = [c_int, c_int]
IfmManualEnvironment.restype = c_int


IfmResetManualEnvironment = ifmdll.IfmResetManualEnvironment
IfmResetManualEnvironment.argtypes = [c_int, c_int, c_int]


#calculates the real wavelength in air (also called Edlen-correction),
#based on the vacuum-wavelength, the air temperature in °C
#the pressure in Pa and the rel. humidity in %

IfmCalculateWavelength = ifmdll.IfmCalculateWavelength
IfmCalculateWavelength.argtypes = [c_double, c_double, c_double, c_double]
IfmCalculateWavelength.restype = c_double



#Special control commands

#section i2c-communication Special commands for accessing other cards

#Low level function for writing a block of data to a card in the interferometer

IfmI2CRequestWrite = ifmdll.IfmI2CRequestWrite
IfmI2CRequestWrite.argtypes = [c_int, c_int, c_int, c_int, c_ubyte]
IfmI2CRequestWrite.restype = c_int


#Check the last IfmI2CWrite operation

#0 if successfull
#IFM_ERROR_I2C_WRITE if an error has occured,
#IFM_ERROR_I2C_INUSE if the system is yet waiting for the acknowledge

IfmI2CStatus = ifmdll.IfmI2CStatus
IfmI2CStatus.artypes = [c_int]
IfmI2CStatus.restype = c_int


#wie IfmI2CRequestWrite, blockiert aber so lange, bis Rueckmeldung von Firmware da oder Timeout

IfmI2CWrite = ifmdll.IfmI2CWrite
IfmI2CWrite.argtypes = [c_int, c_int, c_int, c_int, c_ubyte]
IfmI2CWrite.restype = c_int


#Low level function for requesting a read of a block of data from a card in the interferometer

IfmI2CRequestRead = ifmdll.IfmI2CRequestRead
IfmI2CRequestRead.argtypes = [c_int, c_int, c_int, c_int]
IfmI2CRequestRead.restype = c_int


#Test whether a request to read was successfully.

#param devNumber the unique identifier for the device
#ret true if read has been successfully done, otherwise false

#see IfmI2CRequestRead(int devNumber, int i2cAddr, int ramAddr, int count)

IfmI2CReadReady = ifmdll.IfmI2CReadReady
IfmI2CReadReady.argtypes = [c_int]
IfmI2CReadReady.restype = c_int


#! \brief Access to the internal read buffer

#param index the index in the buffer, valid from 0 to count-1
#(see IfmI2CRequestRead(int devNumber, int i2cAddr, int ramAddr, int count))

IfmI2CReadValue = ifmdll.IfmI2CReadValue
IfmI2CReadValue.argtypes = [c_int, c_int]
IfmI2CReadValue.restype = c_ubyte


#like IfmI2CRequestRead but is blocking until read was successfully or an error has reported

IfmI2CRead = ifmdll.IfmI2CRead
IfmI2CRead.argtypes = [c_int, c_int, c_int, c_int]
IfmI2CRead.restype = c_int

#Hier waren Sternchen vor den Variablen
IfmI2CReadBuffer = ifmdll.IfmI2CReadBuffer
IfmI2CReadBuffer.argtypes = [c_int]
IfmI2CReadBuffer.restype = c_ubyte


#do not use; for internal operations only

IfmI2CReadOscFrequency = ifmdll.IfmI2CReadOscFrequency
IfmI2CReadOscFrequency.argtypes = [c_int, c_int]
IfmI2CReadOscFrequency.restype = c_double

IfmI2CWriteOscFrequency = ifmdll.IfmI2CWriteOscFrequency
IfmI2CWriteOscFrequency.argtypes = [c_int, c_int, c_double]
IfmI2CWriteOscFrequency.restype = c_int


#Error Handling

IfmGetErrorString = ifmdll.IfmGetErrorString
IfmGetErrorString.argtypes = [c_int]
IfmGetErrorString.restype = c_char_p

IfmGetError = ifmdll.IfmGetError
IfmGetError.restype = c_int

#den ersten Fehler seit letztem Aufruf dieser Funktion


#only for internal use

IfmOpenRawUSB = ifmdll.IfmOpenRawUSB
IfmOpenRawUSB.argtypes = [c_int]
IfmOpenRawUSB.restype = c_int


#only for WIN32/64

IfmOpenRawCOM = ifmdll.IfmOpenRawCOM
IfmOpenRawCOM.argtypes = [c_int]
IfmOpenRawCOM.restype = c_int


#the following functions are intended for internal use only

IfmSendRawPacket = ifmdll.IfmSendRawPacket
IfmSendRawPacket.argtypes = [c_int, c_char, c_int]
IfmSendRawPacket.restype = c_int

IfmRawPacketCount = ifmdll.IfmRawPacketCount
IfmRawPacketCount.argtypes = [c_int]
IfmRawPacketCount.restype = c_int

IfmGetRawPacket = ifmdll.IfmGetRawPacket
IfmGetRawPacket.argtypes = [c_int, c_int, c_char, c_int]
IfmGetRawPacket.restype = c_int


#Motor control, not implemented yet, will internally use I2C functions

#brief Stops the motor and disables the power amplifiers

#param devNumber the unique identifier for the device
#param motorNumber the number of the motor
#(each controller card controls two motors, 0 and 1 refers the motors of the first card, 2 and 3 the motors of a second controller card and so on)

#ret error value

IfmMotorStop = ifmdll.IfmMotorStop
IfmMotorStop.argtypes = [c_int, c_int]
IfmMotorStop.restype = c_int


#brief Moves the motor with a constant speed

#param devNumber the unique identifier for the device
#param motorNumber the number of the motor
#(each controller card controls two motors, 0 and 1 refers the motors of the first card, 2 and 3 the motors of a second controller card and so on)
#param speed (in steps/s)

#ret error value

IfmMotorMove = ifmdll.IfmMotorMove
IfmMotorMove.argtypes = [c_int, c_int, c_int]
IfmMotorMove.restype = c_int


#brief Moves the motor to a new position relative to the current position

#param devNumber the unique identifier for the device
#param motorNumber the number of the motor
#(each controller card controls two motors, 0 and 1 refers the motors of the first card, 2 and 3 the motors of a second controller card and so on)
#param position the amount of steps the motor should move
#param speed (in steps/s)

#ret error value

IfmMotorMoveRel = ifmdll.IfmMotorMoveRel
IfmMotorMoveRel.argtypes = [c_int, c_int, c_int, c_int]
IfmMotorMoveRel.restype = c_int


#brief Moves the motor to a new position

#param devNumber the unique identifier for the device
#param motorNumber the number of the motor
#(each controller card controls two motors, 0 and 1 refers the motors of the first card, 2 and 3 the motors of a second controller card and so on)
#param position the new position
#param speed (in steps/s)

#ret error value
